--- a/doc/sunquartex/00-poster/index.qmd
+++ b/doc/sunquartex/00-poster/index.qmd
@@ -73,12 +73,14 @@ BICMR--Ubiquant AI4Math 数据标注团队实习经验
   - [Terence Tao at IMO 2024: AI and Mathematics](https://www.youtube.com/watch?v=e049IoFBnLA)
   - [Lean 的前世今生](https://zhuanlan.zhihu.com/p/183902909)
   - [Natural Number Game](https://adam.math.hhu.de/#/g/leanprover-community/nng4)
+  - [Computational Trilogy - nLab](https://ncatlab.org/nlab/show/computational+trilogy)
 
 - Bibles
 
   - [Mathematics in Lean 4](https://leanprover-community.github.io/mathematics_in_lean/)
   - [Theorem Proving in Lean 4](https://leanprover.github.io/theorem_proving_in_lean4/)
   - [Lean Language Manual](https://leanprover.github.io/lean4/doc/index.html)
+  - [Type Theory - nLab](https://ncatlab.org/nlab/show/type+theory)
 
 - Courses
 
