--- a/doc/sunquartex/00-poster/index.qmd
+++ b/doc/sunquartex/00-poster/index.qmd
@@ -21,7 +21,7 @@ AI4Math 是将人工智能技术应用于数学研究的跨学科领域。其目
 
 本兴趣课程旨在向数学或计算机相关专业学生普及形式化数学的基本概念和方法，掌握 Lean 4 定理证明的基本技能，并了解 AI4Math 的最新进展，为后续更深入的探索做好引导。课程设计为 2025 秋季学期范洋宇老师《抽象代数》的配套课余活动，欢迎感兴趣的同学参与。
 
-本课程原则上不要求任何编程或数学背景，但建议具备至少一侧的常识。我们建议有意动手实操的同学提前配置网络、Git、VSCode 等相关环境。
+本课程原则上不要求任何编程或数学背景，但建议具备至少一侧的常识。我们建议有意动手实操的同学携带电脑，并提前配置好网络、Git、VSCode 等相关环境。
 
 :::{layout="[4,6]"}
 
