--- a/2025fallLean4Teach/index.qmd
+++ b/2025fallLean4Teach/index.qmd
@@ -1,7 +1,96 @@
 ---
+title: 形式化数学与 Lean 4 定理证明入门
+subtitle: Introduction to Formal Mathematics with Lean 4
+author: 钟星宇 \quad 北京理工大学 \quad sun123zxy@qq.com
+date: 2025/09/15
+lang: zh
+
 format:
   html:
-    toc: false
+    other-links:
+      - text: "Lean 4 tactics cheatsheet"
+        href: 00-plan/lean-tactics.pdf
+  pdf: default
 ---
 
-{{< include ../README.md >}}
+# 背景简介
+
+形式化数学是将数学定义、定理和证明转化为计算机可验证的精确形式的过程。可以认为，数学形式化 = 编写程序，而正确的证明 = 代码通过编译。严谨性是数学研究的基石，形式化数学通过严格的逻辑框架和程序语言确保数学结论的正确性和可复用性，在现代数学体系日渐庞大复杂的背景下具有重要意义。
+
+Lean 4 是一个专为形式化数学设计的编程语言和证明助手，支持数学家将数学定理转化为计算机可验证的代码。它具备高效的编译器和灵活的类型系统，适合构建复杂的数学证明；其数学库 Mathlib 正在飞速扩展，目前已覆盖本科数学大部分内容。Lean 4 已成为目前数学形式化工作的主流选择。
+
+AI4Math 是将人工智能技术应用于数学研究的跨学科领域。其目标是通过机器学习、大语言模型等方法，简化形式化过程中的繁重代码编写工作，辅助数学家进行数学形式化、定理证明乃至提出猜想。AI4Math 或将在将来大幅提高数学形式化和数学研究的效率。
+
+# 课程信息
+
+本兴趣课程旨在向数学或计算机相关专业学生普及形式化数学的基本概念和方法，掌握 Lean 4 定理证明的基本技能，并了解 AI4Math 的最新进展，为后续更深入的探索做好引导。课程设计为 2025 秋季学期范洋宇老师《抽象代数》的配套课余活动，欢迎感兴趣的同学参与。
+
+本课程原则上不要求任何编程或数学背景，但建议具备至少一侧的常识。我们建议有意动手实操的同学携带电脑，并提前配置好网络、Git、VSCode 等相关环境。
+
+:::{layout="[4,6]"}
+
+![课程群](00-plan/wechat.png){#fig-wechat height=180px}
+
+**时间**：1--12 周周三 18:30--20:05，首次课程 9 月 17 日  
+**地点**：文萃楼 G223
+**主讲人**：[钟星宇](https://scholar.sun123zxy.top/)    
+北京理工大学 2022 级强基数学专业本科生  
+Mathlib 4 Contributor  
+ICPC Regional Silver Medalist  
+2025 BICMR--RUC 代数与形式化暑期学校学员  
+BICMR--Ubiquant AI4Math 数据标注团队实习经验  
+:::
+
+{{< pagebreak >}}
+
+# 课程大纲（供参考）
+
+- Introduction to Formal Mathematics with Lean 4
+
+- Hello World
+
+- Logic
+
+- Numbers, Functions and Sets
+
+- Dependent Type Theory in Lean 4
+
+- Mathematical Analysis: Taking Limits on the Real Numbers
+
+- Random Lean 4 Tips
+
+- Abstract Algebra: Group, Rings and Fields
+
+- Quotient Types and Universal Properties
+
+- Inductive Types and Induction Methods
+
+- Classes and Instances
+
+- Coercions
+
+# 参考材料
+
+- Introductory:
+
+  - [CAV2024](https://leodemoura.github.io/files/CAV2024.pdf)
+  - [Terence Tao at IMO 2024: AI and Mathematics](https://www.youtube.com/watch?v=e049IoFBnLA)
+  - [Lean 的前世今生](https://zhuanlan.zhihu.com/p/183902909)
+  - [Natural Number Game](https://adam.math.hhu.de/#/g/leanprover-community/nng4)
+  - [Computational Trilogy - nLab](https://ncatlab.org/nlab/show/computational+trilogy)
+
+- Bibles
+
+  - [Mathematics in Lean 4](https://leanprover-community.github.io/mathematics_in_lean/)
+  - [Theorem Proving in Lean 4](https://leanprover.github.io/theorem_proving_in_lean4/)
+  - [Lean Language Manual](https://leanprover.github.io/lean4/doc/index.html)
+  - [Type Theory - nLab](https://ncatlab.org/nlab/show/type+theory)
+
+- Courses
+
+  - [Kevin Buzzard's 2024 course on formalising mathematics in the Lean theorem prover](https://github.com/ImperialCollegeLondon/formalising-mathematics-2024)
+  - BICMR--RUC 2025 代数与形式化暑期学校课程材料
+
+- Community
+
+  - [Lean Zulip](https://leanprover.zulipchat.com/)
