--- a/doc/index.qmd
+++ b/doc/index.qmd
@@ -32,7 +32,7 @@ AI4Math 是将人工智能技术应用于数学研究的跨学科领域。其目
 ![课程群](res/wechat.png){#fig-wechat height=180px}
 
 **时间**：1--12 周周三 18:30--20:05，首次课程 9 月 17 日  
-**地点**：文萃楼 G223  
+**地点**：文萃楼 F502  
 **主讲人**：[钟星宇](https://scholar.sun123zxy.top/)  
 北京理工大学 2022 级强基数学专业本科生  
 Mathlib 4 Contributor  
