--- a/doc/07-analysis.qmd
+++ b/doc/07-analysis.qmd
@@ -1,11 +1,10 @@
 ---
-title: 07-analysis.lean
+title: Mathematical Analysis
 
 number-sections: true
 
 format:
   html: default
-  pdf: default
 ---
 
 {{< lean-include ../2025fallLean4Teach/07-analysis.lean >}}
