--- a/doc/08-group.qmd
+++ b/doc/08-group.qmd
@@ -1,11 +1,10 @@
 ---
-title: 08-group.lean
+title: Groups and Homomorphisms
 
 number-sections: true
 
 format:
   html: default
-  pdf: default
 ---
 
 {{< lean-include ../2025fallLean4Teach/08-group.lean >}}
