--- a/doc/_assets/suntemp-art.tex
+++ b/doc/_assets/suntemp-art.tex
@@ -1,5 +1,5 @@
-\RequirePackage{xstring}
-\RequirePackage{etoolbox}
+\RequirePackage{xstring} % For string tests
+\RequirePackage{etoolbox} % For hacks
 
 % --- test ---
 
@@ -48,6 +48,7 @@
 
 % --- fonts ---
 
+\usepackage{fontspec} % seemingly improves font handling, so that \mathbf works with correct bold fonts
 \usepackage[Medium, Scale=MatchLowercase]{juliamono} % change code font to support Unicode, e.g. Lean code
 
 \ifzh
