--- a/doc/_assets/suntemp-pre.tex
+++ b/doc/_assets/suntemp-pre.tex
@@ -173,6 +173,9 @@ $endif$
 % --- structures ---
 
 $if(toc)$
+
+\setcounter{tocdepth}{$toc-depth$ - 1} % Quarto passes this wrongly. It actually counts from chapter level.
+
 \AtBeginSection[]
 {
   \begin{frame}{\transtoc}
@@ -185,14 +188,15 @@ $if(toc)$
     \tableofcontents[currentsubsection]
   \end{frame}
 }
+
 $endif$
-
-% --- SunQuarTeX ---
-
-\newcommand{\SunQuarTeX}{\phantom{}\kern-.0em\lower.0ex\hbox{\(\mathbf S\)}\kern-.045em\lower.0ex\hbox{\(\scriptstyle \mathbf U\)}\kern-.045em\hbox{\(\scriptstyle \mathbb N\)}\kern-.0em\hbox{\(\mathbb Q\)}\kern-.045em\lower.0ex\hbox{\(\scriptstyle \mathbf U\)}\kern-.135em\lower.0ex\hbox{\(\scriptstyle \mathbf A\)}\kern-.09em\lower.0ex\hbox{\(\scriptstyle \mathbb R\)}\kern-.072em\text{\bfseries\TeX}}
 
 $if(header-includes)$
 $header-includes/first$
+$endif$
+
+$if(sunquartex-logo)$
+$sunquartex-logo$
 $endif$
 
 % --- main ---
