--- a/doc/01-intro.qmd
+++ b/doc/01-intro.qmd
@@ -8,4 +8,4 @@ format:
   html: default
 ---
 
-{{< lean-include ../2025fallLean4Teach/01-intro.lean >}}
+{{< lean-include ../Tutorials/01-intro.lean >}}
