--- a/doc/08-group.qmd
+++ b/doc/08-group.qmd
@@ -8,4 +8,4 @@ format:
   html: default
 ---
 
-{{< lean-include ../2025fallLean4Teach/08-group.lean >}}
+{{< lean-include ../Tutorials/08-group.lean >}}
