--- a/doc/intro.qmd
+++ b/doc/intro.qmd
@@ -270,8 +270,8 @@ Due to the limited time, my personal inability and the design of this course, we
 
 - a deep discussion into dependent type theory or Lean as a programming language itself
 
-  - Read [TPiL](https://lean-lang.org/theorem_proving_in_lean4/) for a Lean 4 tutorial that emphasizes on type theory.
-  - Read [FPiL](https://lean-lang.org/functional_programming_in_lean/) for a Lean 4 tutorial that focuses more on functional programming.
+  - Read [TPiL](https://lean-lang.org/theorem_proving_in_lean4/) for a Lean 4 tutorial that emphasizes on the dependent type theory.
+  - Read [FPiL](https://lean-lang.org/functional_programming_in_lean/) for a Lean 4 tutorial that focuses more on functional programming (monads, etc.)
   - Refer to [Lean Language Manual](https://leanprover.github.io/lean4/doc/index.html) for precise specifications.
 
 - systematic exposition of how a particular branch of mathematics is formalized in Mathlib 4
